<resources>
    <string name="short_app_name">MS Contact Viewer</string>
    <string name="long_app_name">Mauritius Subscribers Contact Viewer</string>
    <string name="title_activity_contacts_main">All Contacts</string>

    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="edit_text_find_contacts">Find contacts</string>
    <string name="no_contacts_to_show">No contacts</string>
    <string name="image_desc">image</string>
    <string name="legend_description">Legend</string>
    <string name="legend_orange">Orange</string>
    <string name="legend_emtel">Emtel</string>
    <string name="legend_mt">Mauritius Telecom</string>
    <string name="legend_mtml">MTML/Chili</string>
    <string name="legend_unreconised">Unrecognised MRU fixed/mobile number</string>
    <string name="legend_other">Other numbers</string>
    <string name="legend_ellipsis">More than 3 numbers</string>
    <string name="action_legend">Legend</string>
    <string name="about_version">Version 1.1.0</string>
    <string name="about_license">Copyright 2016 Ubeidullah Jamal Ahmad\n\nLicensed under the Apache License, Version 2.0 (the "License");\n\nYou may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="action_about">About</string>
    <string name="app_description">Mauritius Subscribers Contact Viewer is a basic contact viewer that identifies the contact\'s phone operator in a Mauritian context.</string>
</resources>
